# image-preseeder

./: .gitignore  EXAMPLES.md  LICENSE.md  Makefile.am  README.md  configure.ac  image-preseeder.in  image-preseeder.template  init-autotools  init-deps
data/: preseed-ubuntu-12.04-mini.cfg  preseed-ubuntu-server-12.04-normal.cfg
data/include-control-virtualbox/: image-preseeder-executor  preseed-late-55-setup-control
data/include-ubuntu-server-12.04/: preseed-late-50-linux-server
data/include-ubuntu-server-12.04-normal/: preseed-late-50-linux-server
examples/: Makefile  Makefile.template
examples/ubuntu-mini-net/: Makefile
examples/ubuntu-server-install/: Makefile  Makefile.template  install-apache  ubuntu-12.04.2-server-i386.sha256
testsuite/: Makefile.am
testsuite/checksums/: debian-6.0.7-amd64-CD-1.sha256  debian-6.0.7-i386-CD-1.sha256  ubuntu-12.04.2-desktop-amd64.sha256  ubuntu-12.04.2-desktop-i386.sha256  ubuntu-12.04.2-server-amd64.sha256  ubuntu-12.10-desktop-amd64.sha256  ubuntu-12.10-desktop-i386.sha256  ubuntu-12.10-server-amd64.sha256  ubuntu-12.10-server-i386.sha256
