# Image Preseeder, a tool to create preseeded Linux installation images
# Copyright 2013 Johannes Lehtinen
#
# Licensed under the MIT License, see LICENSE.md.

AC_INIT([image-preseeder],[1.0-SNAPSHOT])
AC_CONFIG_SRCDIR([image-preseeder.in])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT

# vim:ai:sw=4:sta:et
