# Image Preseeder, a tool to create preseeded Linux installation images
# Copyright 2013 Johannes Lehtinen
#
# Licensed under the MIT License, see LICENSE.md.

# Initialization
AC_INIT([image-preseeder],[1.0-SNAPSHOT])
AC_CONFIG_SRCDIR([image-preseeder.template])
AM_INIT_AUTOMAKE([foreign])

# Output configuration files
AC_CONFIG_FILES([
    Makefile
    testsuite/Makefile
])
AC_OUTPUT

# vim:ai:sw=4:sta:et
