# Image Preseeder, a tool to create preseeded Linux installation images
# Copyright 2013 Johannes Lehtinen
#
# Licensed under the MIT License, see LICENSE.md.

# ISO images to be tested
TEST_IMAGES = \
http://cdimage.debian.org/debian-cd/6.0.7/i386/iso-cd/debian-6.0.7-i386-CD-1.iso \
http://cdimage.debian.org/debian-cd/6.0.7/amd64/iso-cd/debian-6.0.7-amd64-CD-1.iso \
http://releases.ubuntu.com/precise/ubuntu-12.04.2-desktop-i386.iso \
http://releases.ubuntu.com/precise/ubuntu-12.04.2-desktop-amd64.iso \
http://releases.ubuntu.com/precise/ubuntu-12.04.2-server-i386.iso \
http://releases.ubuntu.com/precise/ubuntu-12.04.2-server-amd64.iso \
http://releases.ubuntu.com/quantal/ubuntu-12.10-desktop-i386.iso \
http://releases.ubuntu.com/quantal/ubuntu-12.10-desktop-amd64.iso \
http://releases.ubuntu.com/quantal/ubuntu-12.10-server-i386.iso \
http://releases.ubuntu.com/quantal/ubuntu-12.10-server-amd64.iso 

# Default storage directory
IMAGE_PRESEEDER_STORAGE ?= examples/storage

test-local:
